<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer_button">SPOTIFY STREAMER</string>
    <string name="spotify_toast_button_description">This button will launch my Spotify Streamer!</string>

    <string name="scores_button">SCORES APP</string>
    <string name="scores_toast_button_description">This button will launch my Scores App!</string>

    <string name="library_button">LIBRARY APP</string>
    <string name="library_toast_button_description">This button will launch my Library App!</string>

    <string name="build_it_bigger_button">BUILD IT BIGGER</string>
    <string name="build_toast_button_description">This button will launch my Build it Bigger!</string>

    <string name="reader_button">XYZ READER</string>
    <string name="reader_toast_button_description">This button will launch my XYZ Reader!</string>

    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
    <string name="capstone_toast_button_description">This button will launch my capstone app!</string>

    <string name="nanodegree_title">My Nanodegree Apps!</string>


    <string name="spotify_name_activity">Spotify Streamer</string>

</resources>
