<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_button"
        android:contentDescription="@string/spotify_toast_button_description"
        android:id="@+id/spotifyButton"
        android:layout_marginTop="@dimen/margin_top_spotify_button"
        android:layout_alignRight="@+id/scoresButton"
        android:layout_alignEnd="@+id/scoresButton"
        android:layout_alignLeft="@+id/scoresButton"
        android:layout_alignStart="@+id/scoresButton"
        android:backgroundTint="@color/background_orange_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_button"
        android:contentDescription="@string/scores_toast_button_description"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton"
        android:layout_alignLeft="@+id/myAppButton"
        android:layout_alignStart="@+id/myAppButton"
        android:layout_alignRight="@+id/myAppButton"
        android:layout_alignEnd="@+id/myAppButton"
        android:backgroundTint="@color/background_orange_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_button"
        android:contentDescription="@string/library_toast_button_description"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton"
        android:layout_alignRight="@+id/scoresButton"
        android:layout_alignEnd="@+id/scoresButton"
        android:layout_alignLeft="@+id/scoresButton"
        android:layout_alignStart="@+id/scoresButton"
        android:backgroundTint="@color/background_orange_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_button"
        android:contentDescription="@string/build_toast_button_description"
        android:id="@+id/biggerButton"
        android:layout_below="@+id/libraryButton"
        android:layout_alignRight="@+id/libraryButton"
        android:layout_alignEnd="@+id/libraryButton"
        android:layout_alignLeft="@+id/libraryButton"
        android:layout_alignStart="@+id/libraryButton"
        android:backgroundTint="@color/background_orange_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reader_button"
        android:contentDescription="@string/reader_toast_button_description"
        android:id="@+id/readerButton"
        android:layout_below="@+id/biggerButton"
        android:layout_alignRight="@+id/biggerButton"
        android:layout_alignEnd="@+id/biggerButton"
        android:layout_alignLeft="@+id/biggerButton"
        android:layout_alignStart="@+id/biggerButton"
        android:backgroundTint="@color/background_orange_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:contentDescription="@string/capstone_toast_button_description"
        android:id="@+id/myAppButton"
        android:layout_below="@+id/readerButton"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/background_pink_button"
        android:textColor="@color/text_white_color_label"
        android:onClick="clickOnBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nanodegree_title"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>
